[Views] Update submenu bounds when it's reopened

When the submenu is reopened, its bounds doesn't get
updated. This causes where if the menu is scrolled after
opening the submenu, the submenu will show up in the old
position. This CL fixes this issue by updating the bounds
if the submenu is reopened.

Bug: 852915
Change-Id: I3664cb67f0ea4b15c0802b5fb37af6e7d3c3d789
Reviewed-on: https://chromium-review.googlesource.com/1125202
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: Sarah Chan <spqchan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573383}